fix puppet 3.2.1 deprecation warnings

--- a/templates/dfsroot.erb
+++ b/templates/dfsroot.erb
@@ -1,5 +1,5 @@
 [<%= @name %>]
-<% if msdfs_root != "NONE" %>
+<% if @msdfs_root != "NONE" %>
   msdfs root  = <%= @msdfs_root %>
 <% end -%>
 <% if @msdfs_proxy != "NONE" %>
