Use share_path instead of path for puppet4 compat

--- a/templates/share.erb
+++ b/templates/share.erb
@@ -11,8 +11,8 @@
 <% if @comment != "NONE" -%>
   comment                = <%= @comment %>
 <% end -%>
-<% if @path != "NONE" -%>
-  path                   = <%= @path %>
+<% if @share_path != "NONE" -%>
+  path                   = <%= @share_path %>
 <% end -%>
 <% if @writeable != "NONE" -%>
   writeable              = <%= @writeable %>
