Revert "Use share_path instead of path for puppet4 compat"
This reverts commit dd93d251c051a80910dc1e8aacadad4a3c6293a8.

--- a/templates/share.erb
+++ b/templates/share.erb
@@ -11,8 +11,8 @@
 <% if @comment != "NONE" -%>
   comment                = <%= @comment %>
 <% end -%>
-<% if @share_path != "NONE" -%>
-  path                   = <%= @share_path %>
+<% if @path != "NONE" -%>
+  path                   = <%= @path %>
 <% end -%>
 <% if @writeable != "NONE" -%>
   writeable              = <%= @writeable %>
