--- a/templates/global.erb
+++ b/templates/global.erb
@@ -2,85 +2,85 @@
 #======================= Global Settings =====================================
 
 [global]
-<% if @bind_interfaces_only != "NONE" %>
+<% if !@bind_interfaces_only.nil? %>
   bind interfaces only = <%= @bind_interfaces_only %>
 <% end -%>
-<% if @dns_proxy != "NONE" -%>
+<% if !@dns_proxy.nil? -%>
   dns proxy            = <%= @dns_proxy %>
 <% end -%>
-<% if @encrypt_passwords != "NONE" -%>
+<% if !@encrypt_passwords.nil? -%>
   encrypt passwords    = <%= @encrypt_passwords %>
 <% end -%>
-<% if @host_msdfs != "NONE" -%>
+<% if !@host_msdfs.nil? -%>
   host msdfs           = <%= @host_msdfs %>
 <% end -%>
-<% if @hosts_allow != "NONE" -%>
+<% if !@hosts_allow.nil? -%>
   hosts allow          = <%= [@hosts_allow].flatten.join(" ") %>
 <% end -%>
-<% if @idmap_gid != "NONE" -%>
+<% if !@idmap_gid.nil? -%>
   idmap gid            = <%= @idmap_gid %>
 <% end -%>
-<% if @idmap_uid != "NONE" -%>
+<% if !@idmap_uid.nil? -%>
   idmap uid            = <%= @idmap_uid %>
 <% end -%>
-<% if @interfaces != "NONE" -%>
+<% if !@interfaces.nil? -%>
   interfaces           = <%= @interfaces %>
 <% end -%>
-<% if @load_printers != "NONE" -%>
+<% if !@load_printers.nil? -%>
   load printers        = <%= @load_printers %>
 <% end -%>
-<% if @local_master != "NONE" -%>
+<% if !@local_master.nil? -%>
   local master         = <%= @local_master %>
 <% end -%>
-<% if @log_file != "NONE" -%>
+<% if !@log_file.nil? -%>
   log file             = <%= @log_file %>
 <% end -%>
-<% if @log_level != "NONE" -%>
+<% if !@log_level.nil? -%>
   log level            = <%= @log_level %>
 <% end -%>
-<% if @max_log_size != "NONE" -%>
+<% if !@max_log_size.nil? -%>
   max log size         = <%= @max_log_size %>
 <% end -%>
-<% if @netbios_name != "NONE" -%>
+<% if !@netbios_name.nil? -%>
   netbios name         = <%= @netbios_name %>
 <% end -%>
-<% if @password_server != "NONE" -%>
+<% if !@password_server.nil? -%>
   password server      = <%= @password_server %>
 <% end -%>
-<% if @realm != "NONE" -%>
+<% if !@realm.nil? -%>
   realm                = <%= @realm %>
 <% end -%>
-<% if @remote_announce != "NONE" -%>
+<% if !@remote_announce.nil? -%>
   remote announce      = <%= [@remote_announce].flatten.join(" ") %>
 <% end -%>
-<% if @security != "NONE" -%>
+<% if !@security.nil? -%>
   security             = <%= @security %>
 <% end -%>
-<% if @server_string != "NONE" -%>
+<% if !@server_string.nil? -%>
   server string        = <%= @server_string %>
 <% end -%>
-<% if @socket_options != "NONE" -%>
+<% if !@socket_options.nil? -%>
   socket options       = <%= [@socket_options].flatten.join(" ")  %>
 <% end -%>
-<% if @syslog != "NONE" -%>
+<% if !@syslog.nil? -%>
   syslog               = <%= @syslog %>
 <% end -%>
-<% if @unix_extensions != "NONE" -%>
+<% if !@unix_extensions.nil? -%>
   unix extensions      = <%= @unix_extensions %>
 <% end -%>
-<% if @wide_links != "NONE" -%>
+<% if !@wide_links.nil? -%>
   wide links           = <%= @wide_links %>
 <% end -%>
-<% if @wins_server != "NONE" -%>
+<% if !@wins_server.nil? -%>
   wins server          = <%= [@wins_server].flatten.join(" ") %>
 <% end -%>
-<% if @workgroup != "NONE" -%>
+<% if !@workgroup.nil? -%>
   workgroup            = <%= @workgroup %>
 <% end -%>
-<% if @panic_action != "NONE" -%>
+<% if !@panic_action.nil? -%>
   panic action         = "<%= @panic_action %>"
 <% end -%>
-<% if @strict_locking != "NONE" -%>
+<% if !@strict_locking.nil? -%>
   strict locking       = <%= @strict_locking %>
 <% end -%>
 
