Replace smbserver and dfsproxy classes with a samba::server class

--- a/templates/share.erb
+++ b/templates/share.erb
@@ -12,7 +12,7 @@
   comment                = <%= @comment %>
 <% end -%>
 <% if !@samba_path.nil? -%>
-  path                   = <%= @path %>
+  path                   = <%= @samba_path %>
 <% end -%>
 <% if !@writeable.nil? -%>
   writeable              = <%= @writeable %>
